--- a/components/Footer/styles/style.scss
+++ b/components/Footer/styles/style.scss
@@ -13,7 +13,7 @@
             background-color: #000000;
             color: #ffffff;
             font-size: 17px;
-            padding: 25px;
+            padding: 10px 25px 25px;
         }
 
         > .container > .description {
