--- a/pages/Homepage/styles/index.scss
+++ b/pages/Homepage/styles/index.scss
@@ -28,9 +28,15 @@
     line-height: 25px;
     text-align: center;
     white-space: nowrap;
+    text-transform: uppercase;
 
     &.-blog {
       margin: 40px 0 35px 0;
+    }
+
+    &.-sponsors {
+      line-height: 35px;
+      margin-top: 0;
     }
   }
 
@@ -54,6 +60,39 @@
   .block-title::after {
     left: 30px;
     margin-right: -50%;
+  }
+
+  .wrapper.-sponsors {
+    > .block-title.-sponsors {
+      margin-bottom: 10px;
+    }
+
+    > .image-wrap {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
+
+    > .image-wrap > .img {
+      display: block;
+      width: 70%;
+      height: 70px;
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      margin-bottom: 15px;
+    }
+
+    > .block-title.-sponsors::before {
+      left: -20px;
+      margin-left: -50%;
+    }
+
+    > .block-title.-sponsors::after {
+      left: 20px;
+      margin-right: -50%;
+    }
   }
 
   .blog {
@@ -155,7 +194,7 @@
       display: flex;
       justify-content: center;
       color: #000000;
-      &:hover{
+      &:hover {
         opacity: .8;
       }
     }
@@ -169,6 +208,18 @@
       color: #ffffff;
       font-size: 30px;
       margin-bottom: 0;
+    }
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .wrapper.-sponsors {
+    > .image-wrap {
+      flex-direction: row;
+    }
+
+    > .image-wrap > .img {
+      width: 100%;
     }
   }
 }
@@ -212,7 +263,7 @@
       display: flex;
       margin-left: 30px;
       color: #000000;
-      &:hover{
+      &:hover {
         opacity: .8;
       }
     }
@@ -223,6 +274,12 @@
   .grid-wrapper > .container {
     display: flex;
     width: 100%;
+  }
+
+  .wrapper.-sponsors {
+    > .image-wrap {
+      flex-direction: column;
+    }
   }
 
   > .magazine-wrap {
