--- a/components/Post/styles.scss
+++ b/components/Post/styles.scss
@@ -6,11 +6,11 @@
       margin: 0 3%;
       padding: 40px 0;
     }
-  
+
     > .title {
       display: flex;
       justify-content: center;
-      font-family: medium-content-serif-font, Georgia, Cambria, "Times New Roman", Times, serif;
+      font-family: 'Oswald', serif;
       font-size: 42px;
       font-style: normal;
       font-weight: 600;
@@ -19,10 +19,10 @@
       letter-spacing: -.015em;
       text-transform: capitalize;
     }
-  
+
     > .text {
       display: block;
-      font-family: medium-content-serif-font, Georgia, Cambria, "Times New Roman", Times, serif;
+      font-family: 'Roboto', serif;
       font-size: 21px;
       font-style: normal;
       font-weight: 400;
@@ -32,14 +32,34 @@
       letter-spacing: -0.063px;
       line-height: 33.18px;
     }
-  
+
+    > .link {
+      display: flex;
+      align-items: center;
+      align-self: flex-start;
+      font-size: 18px;
+      color: #ffa500;
+
+      &:hover {
+        color: #000000;
+      }
+    }
+
+    > .link > .icon {
+      margin-right: 10px;
+    }
+
+    > .link > .title {
+      text-transform: lowercase;
+    }
+
     .img {
       height: 25vh;
       background-position: 56% 44%;
       background-size: cover;
       background-origin: border-box;
       margin: 20px 0;
-  
+
       &.-post {
         display: block;
         height: 25vh;
@@ -47,10 +67,8 @@
         width: auto;
         margin: 0 0 20px;
       }
-  
-  
     }
-  }  
+  }
 }
 
 @media screen and (min-width: 900px) {
@@ -69,18 +87,18 @@
         min-height: 300px;
         width: 50%;
         margin: 0;
-  
+
         &.-left {
           float: left;
           margin-right: 20px;
         }
-  
+
         &.-right {
           float: right;
           margin-left: 20px;
         }
       }
     }
-  }  
+  }
 }
 
