--- a/components/style.scss
+++ b/components/style.scss
@@ -78,8 +78,9 @@
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
-      height: 45px;
+      height: 42px;
       width: 100%;
+      padding: 0 10px;
 
       &:hover {
         color: #000000;
@@ -89,6 +90,10 @@
     > .text {
       font-size: 13px;
       cursor: default;
+
+      &.-tag {
+        margin-bottom: 3px;
+      }
     }
   }
 
