--- a/components/Header/styles/style.scss
+++ b/components/Header/styles/style.scss
@@ -120,6 +120,10 @@
             background: rgba(0, 0, 0, 0.3);
         }
 
+        .menu-item {
+            display: block;
+        }
+
     }
 }
 
