--- a/components/Cookie/styles.scss
+++ b/components/Cookie/styles.scss
@@ -1,4 +1,8 @@
 .cookieConsent {
+  & {
+    padding: 0 15px;
+  }
+
   .cookie-text {
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
