--- a/components/Post/styles.scss
+++ b/components/Post/styles.scss
@@ -7,6 +7,10 @@
       padding: 40px 0;
     }
 
+    h4 {
+      font-weight: 600;
+    }
+
     > .title {
       display: flex;
       justify-content: center;
