--- a/components/Post/styles.scss
+++ b/components/Post/styles.scss
@@ -68,6 +68,18 @@
 		.img-wrap > .video-wrap {
 			display: flex;
 			width: 100%;
+			position: relative;
+			height: 0;
+			overflow: hidden;
+			padding: 100px 0;
+		}
+
+		.img-wrap > .video-wrap iframe {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
 		}
   }
 }
